cloudnary upload done

--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ JWT_SECRET=opd123
 REFRESH_SECRET=opd456
 NODE_ENV=development
 CORS_ORIGIN=http://localhost:19006,http://localhost:3000
+CLOUDINARY_CLOUD_NAME=daonmdu8j
+CLOUDINARY_API_KEY=175476581531967
+CLOUDINARY_API_SECRET=NYDbrh3_Ybyzpxwyh45xeankKww
 
